Revision history for Hailo

{{$NEXT}}

    - Improved formatting for --train on the command line. Now outputs
      how many lines/s were trained, e.g. "Trained from 11587 lines in
      36.97 seconds; 313.40/"

    - Fixed a bug on Mac OS X and probably some other
      systems. Previously the SQLite code would assume that a file
      that was `-s $file' was an empty database.

      On Mac OS X these files weren't 0 byte but 1 byte files. Route
      around this entire issue by creating a new API (->initialized)
      that checks if the schema has really been created by doing a
      query on the info table.

    - Solved bug in the t/storage/DBD-SQLite-memory/babble.t test. The
      test was skipped due to intermittent failures. Failures were due
      to a programming error in the tests.

    - DBD-SQLite-file-exhaustive-all.t is now run on
      TEST_EXHAUSTIVE_ALL=1. Previously this test was unreachable.

0.39 2010-04-09 13:21:22

    - Set the homepage field in META.yml to http://hailo.org

    - Add TODO tests for the Words tokenizer. There are some
      sub-optimal capitalization behaviors we'd like to fix.

    - Use Prereq phases in Dist::Zilla. Hailo will have proper
      Runtime/Test/Recommends dependencies when META.yml 2.0 comes
      out.

0.38 2010-04-03 18:15:17

    - Clean up the code in Hailo::Engine::Default. It's now easier to
      read and doesn't have duplication.

    - Depend on IPC::System::Simple. Used by autodie to run
      utils/hailo-benchmark-lib-vs-system

    - Link to http://hailo.org and the freshmeat and ohloh pages for
      hailo.

0.37 2010-03-31 14:28:46

    - Very minor release. Switch to using
      Dist::Zilla::Plugin::MakeMaker::Awesome for the build tools.

0.36 2010-03-29 00:15:35

    - Add a test to try to smoke out a test failure we've been having
      for a while. See the commit message for
      21f68bd79d2fc59505887311042d6d16c5cf79dd for a very long and
      boring explanation.
